--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "@types/node": "18.11.14",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "cloudinary": "^1.33.0",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "mongoose": "^6.8.0",
     "nanoid": "^4.0.0",
     "next": "13.0.6",
+    "next-cloudinary": "^1.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
-    "babel-plugin-styled-components": "^2.0.7"
+    "babel-plugin-styled-components": "^2.0.7",
+    "cypress": "^12.2.0",
+    "eslint-plugin-cypress": "^2.12.1"
   }
 }
