delete locale storage code and add a new collection for matches in the DB

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next-cloudinary": "^1.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "use-local-storage-state": "^18.1.2"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
