--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,7 @@
     "**/*.ts",
     "**/*.tsx",
     "pages/imageUpload.js",
-    "components/CacheLoader.js",
-    "pages/index.js"
+    "components/CacheLoader.tsx"
   ],
   "exclude": ["node_modules"]
 }
